--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,14 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 
+#Android files to ignore
+*.class
+*.dex
+*.ap_
+/bin/
+/gen/
+/.settings/
+
 # =========================
 # Operating System Files
 # =========================
@@ -26,7 +34,8 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -41,3 +50,8 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+#Jarvis files to ignore
+/php/upload/
+*.sublime-workspace
+*.sublime-project
